--- a/index.html
+++ b/index.html
@@ -77,12 +77,37 @@
             </div>
         </section>
         <section id='formas-de-pagamento' class='info-banner'>
-            <h2>Formas de Pagamento</h2>
-            <p>Aqui você pode adicionar as informações sobre as formas de pagamento.</p>
+            <h2 class='title'>FORMAS DE PAGAMENTO</h2>
+            <div class='payment-cards'>
+                <div class='card'>
+                    <h3>DINHEIRO</h3>
+                </div>
+                <div class='card'>
+                    <h3>PIX (recomendado)</h3>
+                </div>
+                <div class='card'>
+                    <h3>CARTÃO DE DÉBITO E CRÉDITO</h3>
+                    <h3>(LINK DE PAGAMENTO COM TAXA DO COMPRADOR)</h3>
+                    <h3>EM ATÉ 12x COM JUROS</h3>
+                </div>
+            </div>
+            <p><strong>Não aceitamos cheques</strong></p>
         </section>
         <section id='contato' class='info-banner'>
             <h2>Contato</h2>
-            <p>Aqui você pode adicionar as informações de contato.</p>
+            <div class='banner'>
+                <h3>CONTATO</h3>
+                <p><img src='whatsapp-logo.png' alt='WhatsApp Logo' class='whatsapp-logo'> (14) 98765-4321</p>
+                <p>sac@farmahouse.com.br</p>
+            </div>
+            <div class='banner'>
+                <h3>HORÁRIO DE ATENDIMENTO</h3>
+                <p>Atendimento de segunda a sábado das 9h às 22h.</p>
+            </div>
+            <div class='banner'>
+                <h3>PERÍMETRO DE ENTREGAS</h3>
+                <p>Lençóis Paulista (exceto Distrito Industrial, Alfredo Guedes e Macatuba)</p>
+            </div>
         </section>
     </main>
     <footer>
