--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
     <header>
         <img src='logo.png' alt='FarmaHome Logo' class='logo'>
-        <h1>FarmaHome</h1>
     </header>
     <nav>
         <ul class='menu'>
             <li><a href='#inicio'>Início</a></li>
-            <li><a href='#quem-somos'>Quem Somos</a></li>
-            <li><a href='#servicos'>Serviços</a></li>
+            <li><a href='#servicos'>Planos</a></li>
+            <li><a href='#como-funciona'>Como funciona</a></li>
             <li><a href='#formas-de-pagamento'>Formas de Pagamento</a></li>
             <li><a href='#contato'>Contato</a></li>
         </ul>
@@ -24,88 +23,59 @@
         <section id='inicio' class='cards'>
             <div class='interactive-card'>
                 <h3>Cotamos</h3>
-                <img src='cotamos-por-voce.png' alt='Cotamos por você'>
+                <img src='cotamos-por-voce.png' alt='Cotamos por você' class="first-img small-img">
                 <p>Pesquisamos os preços, enfrentamos filas, fazemos todo o trabalho chato por você.</p>
             </div>
             <div class='interactive-card'>
                 <h3>Garantia</h3>
-                <img src='garantia.png' alt='Garantia'>
+                <img src='garantia.png' alt='Garantia' class="first-img small-img">
                 <p>Profissionais experientes no mercado que sabem realizar pesquisas e negociações de preços.</p>
             </div>
             <div class='interactive-card'>
                 <h3>Cortesia</h3>
-                <img src='cortesia.png' alt='Cortesia'>
+                <img src='cortesia.png' alt='Cortesia' class="small-img">
                 <p>Se não quiser sair de casa, levamos gratuitamente até você.</p>
+            </div>            
+        </section>
+        <section id='servicos' class="cards">
+            <div class='interactive-card1'>
+                <h3>Conheça os nossos planos</h3>
+                <img src="planos.png" alt="Planos">
             </div>
         </section>
-        <section id='quem-somos' class='info-banner'>
-            <h2>Quem Somos</h2>
+        <section id='como-funciona' class='info-banner'>
+            <h2>Como funciona?</h2>
             <p>Você realiza o pagamento do plano (SIMPLES, PROFUNDO, PROGRAMADO);</p>
             <p>Nos envia a receita ou lista para cotarmos os valores;</p>
-            <p>Retornamos um orçamento com os valores disponíveis somente para o dia vigente;</p>
-            <p>Você pode ir pessoalmente comprar com o orçamento;</p>
-            <p>Se optar por comprar os medicamentos, após o pagamento do orçamento nós te entregamos sem cobrar nada a mais (se for medicamento controlado, também buscamos a receita gratuitamente);</p>
+            <p>Retornamos um orçamento com os valores disponíveis (somente para o dia vigente);</p>
+            <p>Você pode ir pessoalmente comprar com o orçamento ou solicitar que entreguemos sem cobrar nada a mais;</p>
             <p>As entregas acontecem em horários programados:</p>
             <ul>
-                <li>Das 13h às 14h</li>
-                <li>Das 17h às 18h</li>
-                <li>Das 21h às 22h</li>
+                <p>Das 13h às 14h</p>
+                <p>Das 17h às 18h</p>
+                <p>Das 21h às 22h</p>
             </ul>
-            <p>Escolha um horário e te entregamos no conforto do seu lar.</p>
-        </section>
-        <section id='servicos' class='plans'>
-            <button class='plan-button'>CONHEÇA OS NOSSOS PLANOS</button>
-            <div class='interactive-card'>
-                <h3>SIMPLES</h3>
-                <p><strong>R$ 24,90</strong></p>
-                <p>- Uma cotação com os melhores preços que encontramos (prazo: 40 minutos)</p>
-                <p>- Entrega gratuita.</p>
-            </div>
-            <div class='interactive-card'>
-                <h3>PROFUNDO</h3>
-                <p><strong>R$ 29,90</strong></p>
-                <p>- Até 5 cotações das principais drogarias da cidade (prazo: 60 minutos)</p>
-                <p>- Negociação agressiva no balcão.</p>
-                <p>- Entrega gratuita.</p>
-            </div>
-            <div class='interactive-card'>
-                <h3>PROGRAMADO</h3>
-                <p><strong>R$ 19,90/mensais</strong></p>
-                <p>- Até 5 cotações das principais drogarias da cidade (prazo: programado)</p>
-                <p>- Negociação agressiva no balcão.</p>
-                <p>- Entrega gratuita.</p>
-            </div>
         </section>
         <section id='formas-de-pagamento' class='info-banner'>
-            <h2 class='title'>FORMAS DE PAGAMENTO</h2>
+            <h2 class='title'>Formas de pagamento</h2>
             <div class='payment-cards'>
                 <div class='card'>
-                    <h3>DINHEIRO</h3>
-                </div>
-                <div class='card'>
-                    <h3>PIX (recomendado)</h3>
-                </div>
-                <div class='card'>
-                    <h3>CARTÃO DE DÉBITO E CRÉDITO</h3>
-                    <h3>(LINK DE PAGAMENTO COM TAXA DO COMPRADOR)</h3>
-                    <h3>EM ATÉ 12x COM JUROS</h3>
-                </div>
+                    <img src="pix.png" alt="Pix" class="standard-img">
+                    <img src="cartao.png" alt="Cartão" class="standard-img">
             </div>
-            <p><strong>Não aceitamos cheques</strong></p>
         </section>
         <section id='contato' class='info-banner'>
             <h2>Contato</h2>
             <div class='banner'>
-                <h3>CONTATO</h3>
-                <p><img src='whatsapp-logo.png' alt='WhatsApp Logo' class='whatsapp-logo'> (14) 98765-4321</p>
-                <p>sac@farmahouse.com.br</p>
+                <p>(14) 99999-9999</p>
+                <p>farmainhome@gmail.com</p>
             </div>
             <div class='banner'>
-                <h3>HORÁRIO DE ATENDIMENTO</h3>
-                <p>Atendimento de segunda a sábado das 9h às 22h.</p>
+                <h3>Horário de atendimento</h3>
+                <p>Atendimento para cotações de segunda a sábado das 10h às 20h.</p>
             </div>
             <div class='banner'>
-                <h3>PERÍMETRO DE ENTREGAS</h3>
+                <h3>Perímetro de entregas</h3>
                 <p>Lençóis Paulista (exceto Distrito Industrial, Alfredo Guedes e Macatuba)</p>
             </div>
         </section>
