--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class='interactive-card'>
                 <h3>Cotamos</h3>
                 <img src='cotamos-por-voce.png' alt='Cotamos por você' class="first-img small-img">
-                <p>Pesquisamos os preços, enfrentamos filas, fazemos todo o trabalho chato por você.</p>
+                <p>Pesquisamos os preços, enfrentamos filas, negociamos descontos, fazemos todo o trabalho chato por você.</p>
             </div>
             <div class='interactive-card'>
                 <h3>Garantia</h3>
@@ -48,7 +48,7 @@
             <p>Você realiza o pagamento do plano (SIMPLES, PROFUNDO, PROGRAMADO);</p>
             <p>Nos envia a receita ou lista para cotarmos os valores;</p>
             <p>Retornamos um orçamento com os valores disponíveis (somente para o dia vigente);</p>
-            <p>Você pode ir pessoalmente comprar com o orçamento ou solicitar que entreguemos sem cobrar nada a mais;</p>
+            <p>Você pode ir pessoalmente comprar com o orçamento ou solicitar que entreguemos (serviço gratuito em todos os planos);</p>
             <p>As entregas acontecem em horários programados:</p>
             <ul>
                 <p>Das 13h às 14h</p>
