--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         </section>
         <section id='como-funciona' class='info-banner'>
             <h2>Como funciona?</h2>
-            <p>Você realiza o pagamento do plano (SIMPLES, PROFUNDO, PROGRAMADO);</p>
-            <p>Nos envia a receita ou lista para cotarmos os valores;</p>
-            <p>Retornamos um orçamento com os valores disponíveis (somente para o dia vigente);</p>
-            <p>Você pode ir pessoalmente comprar com o orçamento ou solicitar que entreguemos (serviço gratuito em todos os planos);</p>
+            <p>- Você realiza o pagamento do plano (SIMPLES, PREMIUM, PROGRAMADO);</p>
+            <p>- Nos envia a receita ou lista para cotarmos os valores;</p>
+            <p>- Retornamos um orçamento com os valores disponíveis somente para o dia vigente;</p>
+            <p>- Você pode ir pessoalmente comprar com o orçamento ou solicitar que entreguemos (serviço gratuito em todos os planos);</p>
             <p>As entregas acontecem em horários programados:</p>
             <ul>
-                <p>Das 13h às 14h</p>
-                <p>Das 17h às 18h</p>
-                <p>Das 21h às 22h</p>
+                <p>das 13h às 15h</p>
+                <p>das 17h às 19h</p>
+                <p>das 21h às 23h</p>
             </ul>
         </section>
         <section id='formas-de-pagamento' class='info-banner'>
@@ -67,12 +67,12 @@
         <section id='contato' class='info-banner'>
             <h2>Contato</h2>
             <div class='banner'>
-                <p>(14) 99999-9999</p>
+                <p>(14) 99748-0077</p>
                 <p>farmainhome@gmail.com</p>
             </div>
             <div class='banner'>
                 <h3>Horário de atendimento</h3>
-                <p>Atendimento para cotações de segunda a sábado das 10h às 20h.</p>
+                <p>Cotações de segunda a sábado das 10h às 20h (exceto feriados)</p>
             </div>
             <div class='banner'>
                 <h3>Perímetro de entregas</h3>
