--- a/quem-somos.html
+++ b/quem-somos.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
-<html lang='pt-br'>
+<html lang="pt-br">
 <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>FarmaHome - Quem Somos</title>
-    <link rel='stylesheet' href='/static/styles.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quem Somos - FarmaHome</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Certifique-se de que este arquivo está no mesmo diretório -->
 </head>
 <body>
+    <body class="quem-somos">
     <header>
-        <img src='logo.png' alt='FarmaHome Logo' class='logo'>
-        <h1>FarmaHome</h1>
+        <img src="logo.png" alt="FarmaHome Logo" class="logo">
     </header>
     <nav>
-        <ul>
-            <li><a href='index.html'>Início</a></li>
-            <li><a href='quem-somos.html'>Quem Somos</a></li>
-            <li><a href='servicos.html'>Serviços</a></li>
-            <li><a href='formas-de-pagamento.html'>Formas de Pagamento</a></li>
-            <li><a href='contato.html'>Contato</a></li>
+        <ul class="menu">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="index.html#servicos">Planos</a></li>
+            <li><a href="index.html#como-funciona">Como Funciona</a></li>
+            <li><a href="index.html#formas-de-pagamento">Formas de Pagamento</a></li>
+            <li><a href="index.html#contato">Contato</a></li>
+            <li><a href="quem-somos.html" class="active">Quem Somos</a></li>
         </ul>
     </nav>
     <main>
-        <section id='quem-somos'>
-            <h2>QUEM SOMOS</h2>
-            <p>Somos uma empresa lençoense (Lençóis Paulista-SP) preocupada com a saúde física, mental, social e financeira da população. Uma empresa que nasceu no coração de quem já trabalha há mais de dez anos em drogarias e que resolveu dar soluções para situações simples, mas que fazem uma grande diferença na vida das pessoas.</p>
-            <p>Nós proporcionamos comodidade e fazemos o serviço mais chato para você.</p>
-            <p>Veja se você se identifica com as seguintes situações:</p>
-            <ul>
-                <li>Já saiu do trabalho ansioso para chegar em casa e teve que parar na farmácia para comprar os medicamentos e se deparou com uma fila enorme e atendimento demorado levando em média 40 minutos para você sair com as suas compras?</li>
-                <li>Já sentiu que pagou caro e depois foi pesquisar até que encontrou no concorrente um preço mais barato?</li>
-                <li>Já reservou um tempo no seu dia de folga ou horário de descanso para realizar cotações e acabou gastando mais tempo que o esperado, além de não economizar como gostaria por não conseguir negociar com o atendente?</li>
-                <li>Já saiu de casa para ir à farmácia e se deparou com trânsito, situações de acidente, sol quente, chuva, e farmácia sem vaga para estacionar?</li>
+        <section class="info-banner">
+            <h2>Quem Somos</h2>
+            <p>A <strong>Farma in Home</strong> é uma empresa lençoense que nasceu para trazer economia, praticidade e conforto para você. Nossa missão é garantir que você economize seu tempo e o seu dinheiro, eliminando a necessidade de enfrentar filas, trânsito e a busca por descontos.</p>
+            
+            <p>Sabemos que pesquisar preços, enfrentar filas e lidar com o trânsito pode ser cansativo. Por isso, fazemos todo esse trabalho por você. Com mais de dez anos de experiência atuando no setor farmacêutico, nossa equipe entende como negociar os melhores preços e otimizar o seu tempo.</p>
+
+            <h3>O que fazemos por você?</h3>
+            <ul class="icon-list">
+                <li>🔍 Cotamos preços e disponibilidade em diversas farmácias.</li>
+                <li>💰 Negociamos valores, garantindo economia real.</li>
+                <li>📋 Respeitamos seus benefícios de convênios de descontos como UNIMED, AFPESP, OAB, COREN e outros.</li>
+                <li>🚚 Entregamos seu pedido sem custo adicional, inclusive buscando sua receita de medicamento controlado, se necessário.</li>
             </ul>
-            <p>Nós da FarmaHome estamos nos dispondo a passar por todos esses perrengues por você, enfrentando filas, negociando descontos da forma correta (nós sabemos como funcionam os descontos), e levando até sua casa enquanto você usa o seu tempo para fazer outras atividades, como academia, arrumar a casa, passear com os cachorros, brincar e cuidar das crianças, tomar um belo banho depois do trabalho... enfim, usar o seu tempo com o que você gosta e economizando muito dinheiro.</p>
-            <p>Quais são os principais benefícios:</p>
-            <ul>
-                <li>Você não precisa se preocupar se está economizando ou não, pois sempre estará. Em tempos difíceis como agora e em uma cidade cujo o custo de vida tem aumentado nos últimos anos, economizar com o essencial é importante para aumentar o seu poder de compra.</li>
-                <li>Você economiza combustível poupando de percorrer um trajeto médio de 10km considerando o trajeto da sua casa para as farmácias do centro onde você percorre mais tentando encontrar vaga de estacionamento (às vezes acha e ainda tem que andar muito debaixo de sol ou chuva).</li>
-                <li>Você economiza tempo. Considerando que você saia em horário de pico e vá em três farmácias, você leva em média 90 minutos para chegar em casa.</li>
-                <li>Você evita acidentes de trânsito, considerando o alto grau de perigo que é o trânsito de Lençóis Paulista.</li>
+
+            <h3>Nosso serviço é ideal para:</h3>
+            <ul class="icon-list">
+                <li>✔️ Quem tem uma rotina corrida e pouco tempo para pesquisar preços.</li>
+                <li>✔️ Idosos e pessoas com mobilidade reduzida.</li>
+                <li>✔️ Pais e mães que evitam sair com crianças.</li>
+                <li>✔️ Pessoas doentes que evitam o contágio.</li>
+                <li>✔️ Quem busca economia sem perder qualidade.</li>
+                <li>✔️ Quem quer evitar filas, trânsito e gastos extras.</li>
             </ul>
+
+            <h3>Por que escolher a Farma in Home?</h3>
+            <ul class="icon-list">
+                <li>⏳ Mais tempo para você – Sem perda de horas em farmácias.</li>
+                <li>💲 Mais economia – Você sempre paga menos.</li>
+                <li>🛵 Entrega sem custo – Conveniência garantida.</li>
+                <li>🚦 Mais segurança – Sem riscos no trânsito.</li>
+            </ul>
+
+            <p><strong>Deixe a Farma in Home cuidar da sua compra enquanto você aproveita seu tempo com o que realmente importa!</strong></p>
         </section>
     </main>
     <footer>
