--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href='#como-funciona'>Como funciona</a></li>
             <li><a href='#formas-de-pagamento'>Formas de Pagamento</a></li>
             <li><a href='#contato'>Contato</a></li>
+            <li><a href='quem-somos.html'>Quem Somos</a></li>
         </ul>
     </nav>
     <main>
@@ -45,15 +46,15 @@
         </section>
         <section id='como-funciona' class='info-banner'>
             <h2>Como funciona?</h2>
-            <p>- Você realiza o pagamento do plano (SIMPLES, PREMIUM, PROGRAMADO);</p>
-            <p>- Nos envia a receita ou lista para cotarmos os valores;</p>
-            <p>- Retornamos um orçamento com os valores disponíveis somente para o dia vigente;</p>
-            <p>- Você pode ir pessoalmente comprar com o orçamento ou solicitar que entreguemos (serviço gratuito em todos os planos);</p>
-            <p>As entregas acontecem em horários programados:</p>
+            <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Simples, Premium ou Programado</strong>.</p>
+            <p>2. Envie sua receita ou lista de medicamentos para que possamos cotar os valores.</p>
+            <p>3. Receba nosso orçamento exclusivo com os melhores preços do dia.</p>
+            <p>4. Decida: você pode realizar a compra pessoalmente utilizando o orçamento enviado ou solicitar que façamos a entrega (serviço gratuito em todos os planos).</p>
+            <h3>Horários de entrega:</h3>
             <ul>
-                <p>das 13h às 15h</p>
-                <p>das 17h às 19h</p>
-                <p>das 21h às 23h</p>
+                <p>13h às 15h</p>
+                <p>17h às 19h</p>
+                <p>21h às 23h</p>
             </ul>
         </section>
         <section id='formas-de-pagamento' class='info-banner'>
@@ -62,6 +63,7 @@
                 <div class='card'>
                     <img src="pix.png" alt="Pix" class="standard-img">
                     <img src="cartao.png" alt="Cartão" class="standard-img">
+                </div>
             </div>
         </section>
         <section id='contato' class='info-banner'>
