--- a/quem-somos.html
+++ b/quem-somos.html
@@ -39,6 +39,7 @@
             <h3>Nosso serviço é ideal para:</h3>
             <ul class="icon-list">
                 <li>✔️ Quem tem uma rotina corrida e pouco tempo para pesquisar preços.</li>
+                <li>✔️ Quem não aguenta esperar atendimento demorado no balcão ou por telefone/whatsapp.</li>
                 <li>✔️ Idosos e pessoas com mobilidade reduzida.</li>
                 <li>✔️ Pais e mães que evitam sair com crianças.</li>
                 <li>✔️ Pessoas doentes que evitam o contágio.</li>
@@ -48,8 +49,8 @@
 
             <h3>Por que escolher a Farma in Home?</h3>
             <ul class="icon-list">
-                <li>⏳ Mais tempo para você – Sem perda de horas em farmácias.</li>
-                <li>💲 Mais economia – Você sempre paga menos.</li>
+                <li>⏳ Mais tempo para você – Sem perda de horas aguardando atendimento em farmácias.</li>
+                <li>💲 Mais economia – Você sempre vai economizar.</li>
                 <li>🛵 Entrega sem custo – Conveniência garantida.</li>
                 <li>🚦 Mais segurança – Sem riscos no trânsito.</li>
             </ul>
