--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             <li><a href='quem-somos.html'>Quem Somos</a></li>
         </ul>
     </nav>
+    <div id="whatsapp-button">
+        <a href="https://wa.me/5514997480077" target="_blank">
+            <img src="whatsapp-logo.png" alt="WhatsApp">
+            <span>Fale conosco</span>
+        </a>
+    </div>      
     <main>
         <section id='inicio' class='cards'>
             <div class='interactive-card'>
@@ -61,15 +67,26 @@
             <h2 class='title'>Formas de pagamento</h2>
             <div class='payment-cards'>
                 <div class='card'>
-                    <img src="pix.png" alt="Pix" class="standard-img">
-                    <img src="cartao.png" alt="Cartão" class="standard-img">
+                    <div class="payment-option">
+                        <p>PIX</p>
+                        <img src="pix.png" alt="Pix" class="standard-img">
+                    </div>
+                    <div class="payment-option">
+                        <p>Cartão de Débito ou Crédito</p>
+                        <img src="cartao.png" alt="Cartão" class="standard-img">
+                    </div>
                 </div>
             </div>
-        </section>
+        </section>           
         <section id='contato' class='info-banner'>
             <h2>Contato</h2>
             <div class='banner'>
-                <p>(14) 99748-0077</p>
+                <div id="contact-button">
+                    <a href="https://wa.me/5514997480077" target="_blank">
+                        <img src="whatsapp-logo.png" alt="WhatsApp">
+                        <span>(14) 99748-0077</span>
+                    </a>
+                </div>
                 <p>farmainhome@gmail.com</p>
             </div>
             <div class='banner'>
@@ -80,7 +97,7 @@
                 <h3>Perímetro de entregas</h3>
                 <p>Lençóis Paulista (exceto Distrito Industrial, Alfredo Guedes e Macatuba)</p>
             </div>
-        </section>
+        </section>        
     </main>
     <footer>
         <p>&copy; 2025 FarmaHome. Todos os direitos reservados.</p>
