--- a/quem-somos.html
+++ b/quem-somos.html
@@ -21,6 +21,12 @@
             <li><a href="quem-somos.html" class="active">Quem Somos</a></li>
         </ul>
     </nav>
+    <div id="whatsapp-button">
+        <a href="https://wa.me/5514997480077" target="_blank">
+            <img src="whatsapp-logo.png" alt="WhatsApp">
+            <span>Fale conosco</span>
+        </a>
+    </div>      
     <main>
         <section class="info-banner">
             <h2>Quem Somos</h2>
@@ -39,7 +45,6 @@
             <h3>Nosso serviço é ideal para:</h3>
             <ul class="icon-list">
                 <li>✔️ Quem tem uma rotina corrida e pouco tempo para pesquisar preços.</li>
-                <li>✔️ Quem não aguenta esperar atendimento demorado no balcão ou por telefone/whatsapp.</li>
                 <li>✔️ Idosos e pessoas com mobilidade reduzida.</li>
                 <li>✔️ Pais e mães que evitam sair com crianças.</li>
                 <li>✔️ Pessoas doentes que evitam o contágio.</li>
@@ -49,8 +54,8 @@
 
             <h3>Por que escolher a Farma in Home?</h3>
             <ul class="icon-list">
-                <li>⏳ Mais tempo para você – Sem perda de horas aguardando atendimento em farmácias.</li>
-                <li>💲 Mais economia – Você sempre vai economizar.</li>
+                <li>⏳ Mais tempo para você – Sem perda de horas em farmácias.</li>
+                <li>💲 Mais economia – Você sempre paga menos.</li>
                 <li>🛵 Entrega sem custo – Conveniência garantida.</li>
                 <li>🚦 Mais segurança – Sem riscos no trânsito.</li>
             </ul>
