--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <img src="pix.png" alt="Pix" class="standard-img">
                     </div>
                     <div class="payment-option">
-                        <p>Cartão de Débito ou Crédito</p>
+                        <p>Cartão de Crédito</p>
                         <img src="cartao.png" alt="Cartão" class="standard-img">
                     </div>
                 </div>
