--- a/index.html
+++ b/index.html
@@ -47,15 +47,36 @@
         <section id='servicos' class="cards">
             <div class='interactive-card1'>
                 <h3>Conheça os nossos planos</h3>
-                <img src="planos.png" alt="Planos">
+                <div class='planos-container'>
+                    <div class='plano basico'>
+                        <h4>Básico</h4>
+                        <p class="preco">R$ 19,90</p>
+                        <ul>
+                            <li>Uma cotação com os melhores preços que encontramos.</li>
+                            <li>Comparação entre os dois melhores preços.</li>
+                            <li>Entrega gratuita.</li>
+                        </ul>
+                        <p><em>Ideal para quem tem uma lista com poucos itens.</em></p>
+                    </div>
+                    <div class='plano premium'>
+                        <h4>Premium</h4>
+                        <p class="preco">R$ 22,90</p>
+                        <ul>
+                            <li>Uma cotação com os melhores preços de até 5 farmácias diferentes.</li>
+                            <li>Pesquisamos, negociamos e não desistimos até conseguir o melhor preço.</li>
+                            <li>Entrega gratuita.</li>
+                        </ul>
+                        <p><em>Ideal para quem tem uma lista com muitos itens com valores muito elevados.</em></p>
+                    </div>
+                </div>
             </div>
-        </section>
+        </section>           
         <section id='como-funciona' class='info-banner'>
             <h2>Como funciona?</h2>
-            <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Simples, Premium ou Programado</strong>.</p>
+            <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Básico ou Premium.</strong>.</p>
             <p>2. Envie sua receita ou lista de medicamentos para que possamos cotar os valores.</p>
             <p>3. Receba nosso orçamento exclusivo com os melhores preços do dia.</p>
-            <p>4. Decida: você pode realizar a compra pessoalmente utilizando o orçamento enviado ou solicitar que façamos a entrega (serviço gratuito em todos os planos).</p>
+            <p>4. Decida: você pode realizar a compra pessoalmente utilizando o orçamento ou solicitar que façamos a entrega (serviço gratuito em todos os planos).</p>
             <h3>Horários de entrega:</h3>
             <ul>
                 <p>13h às 15h</p>
