--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>FarmaHome</title>
     <link rel='stylesheet' href='/styles.css'>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WNSGK06QP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2WNSGK06QP');
+</script>
 <body>
     <header>
         <img src='logo.png' alt='FarmaHome Logo' class='logo'>
