--- a/quem-somos.html
+++ b/quem-somos.html
@@ -6,6 +6,15 @@
     <title>Quem Somos - FarmaHome</title>
     <link rel="stylesheet" href="styles.css"> <!-- Certifique-se de que este arquivo está no mesmo diretório -->
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WNSGK06QP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2WNSGK06QP');
+</script>
 <body>
     <body class="quem-somos">
     <header>
