--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <title>FarmaHome</title>
     <link rel='stylesheet' href='/styles.css'>
 </head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WNSGK06QP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2WNSGK06QP');
-</script>
 <body>
     <header>
         <img src='logo.png' alt='FarmaHome Logo' class='logo'>
@@ -61,7 +52,7 @@
                         <h4>Básico</h4>
                         <p class="preco">R$ 19,90</p>
                         <ul>
-                            <li>Uma cotação com os melhores preços que encontramos.</li>
+                            <li>Uma cotação com os melhores preços das principais farmácias.</li>
                             <li>Comparação entre os dois melhores preços.</li>
                             <li>Entrega gratuita.</li>
                         </ul>
@@ -82,19 +73,14 @@
         </section>           
         <section id='como-funciona' class='info-banner'>
             <h2>Como funciona?</h2>
-            <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Básico ou Premium.</strong>.</p>
+            <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Básico ou Premium</strong>.</p>
             <p>2. Envie sua receita ou lista de medicamentos para que possamos cotar os valores.</p>
-            <p>3. Receba nosso orçamento exclusivo com os melhores preços do dia.</p>
+            <p>3. Receba nosso orçamento com preços exclusivos que negociamos para você.</p>
             <p>4. Decida: você pode realizar a compra pessoalmente utilizando o orçamento ou solicitar que façamos a entrega (serviço gratuito em todos os planos).</p>
-            <h3>Horários de entrega:</h3>
-            <ul>
-                <p>13h às 15h</p>
-                <p>17h às 19h</p>
-                <p>21h às 23h</p>
-            </ul>
         </section>
         <section id='formas-de-pagamento' class='info-banner'>
             <h2 class='title'>Formas de pagamento</h2>
+            <p>Pague os nossos planos com rapidez e comodidade:</p>
             <div class='payment-cards'>
                 <div class='card'>
                     <div class="payment-option">
@@ -121,7 +107,7 @@
             </div>
             <div class='banner'>
                 <h3>Horário de atendimento</h3>
-                <p>Cotações de segunda a sábado das 10h às 20h (exceto feriados)</p>
+                <p>De segunda a sábado das 10h às 19h (exceto feriados)</p>
             </div>
             <div class='banner'>
                 <h3>Perímetro de entregas</h3>
