--- a/quem-somos.html
+++ b/quem-somos.html
@@ -6,15 +6,6 @@
     <title>Quem Somos - FarmaHome</title>
     <link rel="stylesheet" href="styles.css"> <!-- Certifique-se de que este arquivo está no mesmo diretório -->
 </head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WNSGK06QP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2WNSGK06QP');
-</script>
 <body>
     <body class="quem-somos">
     <header>
@@ -41,14 +32,14 @@
             <h2>Quem Somos</h2>
             <p>A <strong>Farma in Home</strong> é uma empresa lençoense que nasceu para trazer economia, praticidade e conforto para você. Nossa missão é garantir que você economize seu tempo e o seu dinheiro, eliminando a necessidade de enfrentar filas, trânsito e a busca por descontos.</p>
             
-            <p>Sabemos que pesquisar preços, enfrentar filas e lidar com o trânsito pode ser cansativo. Por isso, fazemos todo esse trabalho por você. Com mais de dez anos de experiência atuando no setor farmacêutico, nossa equipe entende como negociar os melhores preços e otimizar o seu tempo.</p>
+            <p>Sabemos que pesquisar preços, enfrentar filas, aguardar atendimento no Whatsapp e não ser atendido no telefone pode ser cansativo. Por isso, fazemos todo esse trabalho por você. Com mais de dez anos de experiência atuando no setor farmacêutico, nossa equipe entende como negociar os melhores preços e otimizar o seu tempo.</p>
 
             <h3>O que fazemos por você?</h3>
             <ul class="icon-list">
-                <li>🔍 Cotamos preços e disponibilidade em diversas farmácias.</li>
+                <li>🔍 Cotamos preços e disponibilidade de estoque em diversas farmácias.</li>
                 <li>💰 Negociamos valores, garantindo economia real.</li>
                 <li>📋 Respeitamos seus benefícios de convênios de descontos como UNIMED, AFPESP, OAB, COREN e outros.</li>
-                <li>🚚 Entregamos seu pedido sem custo adicional, inclusive buscando sua receita de medicamento controlado, se necessário.</li>
+                <li>🚚 Entregamos seu pedido sem custo adicional, inclusive buscamos sua receita de medicamento controlado, se necessário.</li>
             </ul>
 
             <h3>Nosso serviço é ideal para:</h3>
@@ -69,11 +60,12 @@
                 <li>🚦 Mais segurança – Sem riscos no trânsito.</li>
             </ul>
 
-            <p><strong>Deixe a Farma in Home cuidar da sua compra enquanto você aproveita seu tempo com o que realmente importa!</strong></p>
+            <p><strong>Deixe a Farma in Home cuidar da sua compra enquanto você aproveita seu tempo com o que realmente importa.</strong></p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 FarmaHome. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Farma in Home. Todos os direitos reservados.</p>
+        <p>CNPJ: 60.457.201/0001-44</p>
     </footer>
 </body>
 </html>
