--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <title>FarmaHome</title>
     <link rel='stylesheet' href='/styles.css'>
 </head>
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WNSGK06QP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2WNSGK06QP');
-</script>
 <body>
     <header>
         <img src='logo.png' alt='FarmaHome Logo' class='logo'>
@@ -62,7 +53,7 @@
                         <p class="preco">R$ 19,90</p>
                         <ul>
                             <li>Uma cotação com os melhores preços das principais farmácias.</li>
-                            <li>Comparação entre os dois melhores preços.</li>
+                            <li>Pesquisamos as promoções e os preços vigentes do dia.</li>
                             <li>Entrega gratuita.</li>
                         </ul>
                         <p><em>Ideal para quem tem uma lista com poucos itens.</em></p>
@@ -85,7 +76,8 @@
             <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Básico ou Premium</strong>.</p>
             <p>2. Envie sua receita ou lista de medicamentos para que possamos cotar os valores.</p>
             <p>3. Receba nosso orçamento com preços exclusivos que negociamos para você.</p>
-            <p>4. Decida: você pode realizar a compra pessoalmente utilizando o orçamento ou solicitar que façamos a entrega (serviço gratuito em todos os planos).</p>
+            <p>4. Decida: você pode realizar a compra pessoalmente utilizando o orçamento ou solicitar que façamos a entrega*.</p>
+            <p>*consulte as regras e condições para a entrega</p>
         </section>
         <section id='formas-de-pagamento' class='info-banner'>
             <h2 class='title'>Formas de pagamento</h2>
@@ -125,7 +117,8 @@
         </section>        
     </main>
     <footer>
-        <p>&copy; 2025 FarmaHome. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Farma in Home. Todos os direitos reservados.</p>
+        <p>CNPJ: 60.457.201/0001-44</p>
     </footer>
 </body>
 </html>
