Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                         <ul>
                             <li>Uma cotação com os melhores preços das principais farmácias.</li>
                             <li>Pesquisamos as promoções e os preços vigentes do dia.</li>
-                            <li>Entrega gratuita.</li>
+                            <li>Entrega gratuita (agendada).</li>
                         </ul>
                         <p><em>Ideal para quem tem uma lista com poucos itens.</em></p>
                     </div>
                     <div class='plano premium'>
                         <h4>Premium</h4>
-                        <p class="preco">R$ 22,90</p>
+                        <p class="preco">R$ 25,90</p>
                         <ul>
                             <li>Uma cotação com os melhores preços de até 5 farmácias diferentes.</li>
                             <li>Pesquisamos, negociamos e não desistimos até conseguir o melhor preço.</li>
-                            <li>Entrega gratuita.</li>
+                            <li>Entrega gratuita (prioritária).</li>
                         </ul>
                         <p><em>Ideal para quem tem uma lista com muitos itens com valores muito elevados.</em></p>
                     </div>
