--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         <p class="preco">R$ 19,90</p>
                         <ul>
                             <li>Uma cotação com os melhores preços das principais farmácias.</li>
-                            <li>Pesquisamos as promoções e os preços vigentes do dia.</li>
+                            <li>Pesquisamos aprofundadamente as promoções e os melhores preços vigentes do dia.</li>
+                            <li>Consultamos a disponibilidade de estoque.</li>
                             <li>Entrega gratuita (agendada).</li>
                         </ul>
                         <p><em>Ideal para quem tem uma lista com poucos itens.</em></p>
@@ -64,16 +65,17 @@
                         <ul>
                             <li>Uma cotação com os melhores preços de até 5 farmácias diferentes.</li>
                             <li>Pesquisamos, negociamos e não desistimos até conseguir o melhor preço.</li>
+                            <li>Consultamos a disponibilidade de estoque.</li>
                             <li>Entrega gratuita (prioritária).</li>
                         </ul>
-                        <p><em>Ideal para quem tem uma lista com muitos itens com valores muito elevados.</em></p>
+                        <p><em>Ideal para quem tem uma lista com muitos itens com valores elevados.</em></p>
                     </div>
                 </div>
             </div>
         </section>           
         <section id='como-funciona' class='info-banner'>
             <h2>Como funciona?</h2>
-            <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Básico ou Premium</strong>.</p>
+            <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Básico</strong> ou <strong>Premium</strong>.</p>
             <p>2. Envie sua receita ou lista de medicamentos para que possamos cotar os valores.</p>
             <p>3. Receba nosso orçamento com preços exclusivos que negociamos para você.</p>
             <p>4. Decida: você pode realizar a compra pessoalmente utilizando o orçamento ou solicitar que façamos a entrega*.</p>
