--- a/quem-somos.html
+++ b/quem-somos.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem Somos - FarmaHome</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Certifique-se de que este arquivo está no mesmo diretório -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WNSGK06QP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2WNSGK06QP');
+</script>
     <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
