--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang='pt-br'>
+<html lang="pt-br">
 <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>FarmaHome</title>
-    <link rel='stylesheet' href='/styles.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FarmaHome - Em Manutenção</title>
+    <link rel="stylesheet" href="/styles.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2WNSGK06QP"></script>
 <script>
@@ -34,119 +34,18 @@ src="https://www.facebook.com/tr?id=2196594530774915&ev=PageView&noscript=1"
 </head>
 <body>
     <header>
-        <img src='logo.png' alt='FarmaHome Logo' class='logo'>
+        <img src="logo.png" alt="FarmaHome Logo" class="logo">
     </header>
-    <nav>
-        <ul class='menu'>
-            <li><a href='#inicio'>Início</a></li>
-            <li><a href='#servicos'>Planos</a></li>
-            <li><a href='#como-funciona'>Como funciona</a></li>
-            <li><a href='#formas-de-pagamento'>Formas de Pagamento</a></li>
-            <li><a href='#contato'>Contato</a></li>
-            <li><a href='quem-somos.html'>Quem Somos</a></li>
-        </ul>
-    </nav>
-    <div id="whatsapp-button">
-        <a href="https://wa.me/5514997480077" target="_blank">
-            <img src="whatsapp-logo.png" alt="WhatsApp">
-            <span>Fale conosco</span>
-        </a>
-    </div>      
+    
     <main>
-        <section id='inicio' class='cards'>
-            <div class='interactive-card'>
-                <h3>Cotamos</h3>
-                <img src='cotamos-por-voce.png' alt='Cotamos por você' class="first-img small-img">
-                <p>Pesquisamos os preços, enfrentamos filas, negociamos descontos, fazemos todo o trabalho chato por você.</p>
-            </div>
-            <div class='interactive-card'>
-                <h3>Garantia</h3>
-                <img src='garantia.png' alt='Garantia' class="first-img small-img">
-                <p>Profissionais experientes no mercado que sabem realizar pesquisas e negociações de preços.</p>
-            </div>
-            <div class='interactive-card'>
-                <h3>Cortesia</h3>
-                <img src='cortesia.png' alt='Cortesia' class="small-img">
-                <p>Se não quiser sair de casa, levamos gratuitamente até você.</p>
-            </div>            
+        <section class="maintenance">
+            <h1>Site em Manutenção</h1>
+            <p>Estamos trabalhando para melhorar sua experiência. Voltaremos em breve!</p>
         </section>
-        <section id='servicos' class="cards">
-            <div class='interactive-card1'>
-                <h3>Conheça os nossos planos</h3>
-                <div class='planos-container'>
-                    <div class='plano basico'>
-                        <h4>Básico</h4>
-                        <p class="preco">R$ 19,90</p>
-                        <ul>
-                            <li>Uma cotação com os melhores preços das principais farmácias.</li>
-                            <li>Pesquisamos aprofundadamente as promoções e os melhores preços vigentes do dia.</li>
-                            <li>Consultamos a disponibilidade de estoque.</li>
-                            <li>Entrega gratuita (agendada).</li>
-                        </ul>
-                        <p><em>Ideal para quem tem uma lista com poucos itens.</em></p>
-                    </div>
-                    <div class='plano premium'>
-                        <h4>Premium</h4>
-                        <p class="preco">R$ 25,90</p>
-                        <ul>
-                            <li>Uma cotação com os melhores preços de até 5 farmácias diferentes.</li>
-                            <li>Pesquisamos, negociamos e não desistimos até conseguir o melhor preço.</li>
-                            <li>Consultamos a disponibilidade de estoque.</li>
-                            <li>Entrega gratuita (prioritária).</li>
-                        </ul>
-                        <p><em>Ideal para quem tem uma lista com muitos itens com valores elevados.</em></p>
-                    </div>
-                </div>
-            </div>
-        </section>           
-        <section id='como-funciona' class='info-banner'>
-            <h2>Como funciona?</h2>
-            <p>1. Escolha e efetue o pagamento de um de nossos planos: <strong>Básico</strong> ou <strong>Premium</strong>.</p>
-            <p>2. Envie sua receita ou lista de medicamentos para que possamos cotar os valores.</p>
-            <p>3. Receba nosso orçamento com preços exclusivos que negociamos para você.</p>
-            <p>4. Decida: você pode realizar a compra pessoalmente utilizando o orçamento ou solicitar que façamos a entrega*.</p>
-            <p>*consulte as regras e condições para a entrega</p>
-        </section>
-        <section id='formas-de-pagamento' class='info-banner'>
-            <h2 class='title'>Formas de pagamento</h2>
-            <p>Pague os nossos planos com rapidez e comodidade:</p>
-            <div class='payment-cards'>
-                <div class='card'>
-                    <div class="payment-option">
-                        <p>PIX</p>
-                        <img src="pix.png" alt="Pix" class="standard-img">
-                    </div>
-                    <div class="payment-option">
-                        <p>Cartão de Crédito</p>
-                        <img src="cartao.png" alt="Cartão" class="standard-img">
-                    </div>
-                </div>
-            </div>
-        </section>           
-        <section id='contato' class='info-banner'>
-            <h2>Contato</h2>
-            <div class='banner'>
-                <div id="contact-button">
-                    <a href="https://wa.me/5514997480077" target="_blank">
-                        <img src="whatsapp-logo.png" alt="WhatsApp">
-                        <span>(14) 99748-0077</span>
-                    </a>
-                </div>
-                <p>farmainhome@gmail.com</p>
-            </div>
-            <div class='banner'>
-                <h3>Horário de atendimento</h3>
-                <p>De segunda a sábado das 10h às 19h (exceto feriados)</p>
-            </div>
-            <div class='banner'>
-                <h3>Perímetro de entregas</h3>
-                <p>Lençóis Paulista (exceto Distrito Industrial, Alfredo Guedes e Macatuba)</p>
-            </div>
-        </section>        
     </main>
+    
     <footer>
         <p>&copy; 2025 Farma in Home. Todos os direitos reservados.</p>
-        <p>CNPJ: 60.457.201/0001-44</p>
     </footer>
 </body>
 </html>
